--- a/handheld/build.gradle
+++ b/handheld/build.gradle
@@ -14,7 +14,7 @@ android {
         minSdkVersion 24
         targetSdkVersion 27
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -32,13 +32,16 @@ android {
 dependencies {
     def android_support_version = '27.1.1'
     def coroutines_version = '0.19.3'
-    def work_version = "1.0.0-alpha02"
+    def work_version = '1.0.0-alpha02'
+
+    wearApp project(':wear')
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'com.google.android.gms:play-services-wearable:15.0.1'
     implementation "com.android.support:support-v4:$android_support_version"
     implementation "com.android.support:appcompat-v7:$android_support_version"
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -46,9 +49,6 @@ dependencies {
     // Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
-
-    // Logging
-    implementation 'com.jakewharton.timber:timber:4.6.0'
 
     //AAC
     implementation "android.arch.work:work-runtime:$work_version"
