--- a/handheld/src/main/AndroidManifest.xml
+++ b/handheld/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.geckour.nocturne">
+<manifest package="com.geckour.nocturne"
+          xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="com.google.android.wearable.permission.RECEIVE_COMPLICATION_DATA"/>
 
     <application
-        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -11,12 +13,12 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".KickingActivity"
-            android:theme="@android:style/Theme.NoDisplay">
+            android:name=".SettingActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="com.example.android.wearable.watchface.CONFIG_DIGITAL"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="com.google.android.wearable.watchface.category.COMPANION_CONFIGURATION"/>
+                <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
     </application>
