--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -12,14 +12,43 @@ android {
         applicationId "com.geckour.nocturne"
         minSdkVersion 23
         targetSdkVersion 27
-        versionCode 1
+        versionCode 10
         versionName "1.0.0"
         multiDexEnabled true
     }
+
+    signingConfigs {
+        debug {
+            keyAlias 'AndroidDebugKey'
+            keyPassword 'android'
+            storeFile file("${project.rootDir}/signing/debug.keystore")
+            storePassword 'android'
+        }
+        release {
+            def releaseSettingGradleFile = new File("${project.rootDir}/signing/release.gradle")
+            if (releaseSettingGradleFile.exists()) {
+                apply from: releaseSettingGradleFile, to: android
+            } else {
+                throw new GradleException("Missing ${releaseSettingGradleFile.getAbsolutePath()} . Generate the file by copying and modifying ${project.rootDir}/signing/release.gradle.sample .")
+            }
+        }
+    }
+
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
+        }
+    }
+
+    flavorDimensions 'distribute'
+
+    productFlavors {
+        wear1 { dimension 'distribute' }
+        wear2 {
+            dimension 'distribute'
+            minSdkVersion 25
         }
     }
 }
@@ -29,7 +58,7 @@ dependencies {
     def coroutines_version = '0.19.3'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.google.android.support:wearable:2.3.0'
     implementation 'com.google.android.gms:play-services-wearable:15.0.1'
     implementation "com.android.support:design:$android_support_version"
