--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
 
         <service
             android:name=".NocturneFaceService"
-            android:label="@string/main_name"
+            android:label="@string/face_name"
             android:permission="android.permission.BIND_WALLPAPER">
             <meta-data
                 android:name="android.service.wallpaper"
