--- a/handheld/src/main/AndroidManifest.xml
+++ b/handheld/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
-<manifest package="com.geckour.nocturne"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.geckour.nocturne">
 
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
-    <uses-permission android:name="com.google.android.wearable.permission.RECEIVE_COMPLICATION_DATA"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="com.google.android.wearable.permission.RECEIVE_COMPLICATION_DATA" />
 
     <application
         android:allowBackup="true"
@@ -13,12 +13,13 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".SettingActivity">
+            android:name=".SettingActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
-                <action android:name="com.example.android.wearable.watchface.CONFIG_DIGITAL"/>
+                <action android:name="com.example.android.wearable.watchface.CONFIG_DIGITAL" />
 
-                <category android:name="com.google.android.wearable.watchface.category.COMPANION_CONFIGURATION"/>
-                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="com.google.android.wearable.watchface.category.COMPANION_CONFIGURATION" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
     </application>
