--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,6 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 android.enableD8=true
 android.enableD8.desugaring=true
+android.databinding.enableV2=true
+android.useAndroidX=true
+android.enableJetifier=true
