--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -4,17 +4,15 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
-kotlin.experimental.coroutines 'enable'
-
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
+
     defaultConfig {
         applicationId "com.geckour.nocturne"
+        targetSdkVersion 28
         minSdkVersion 23
-        targetSdkVersion 27
-        versionCode 20
-        versionName "1.0.1"
-        multiDexEnabled true
+        versionCode 30
+        versionName "1.0.2"
     }
 
     signingConfigs {
@@ -54,25 +52,24 @@ android {
 }
 
 dependencies {
-    def android_support_version = '27.1.1'
-    def coroutines_version = '0.19.3'
+    def coroutines_version = '1.0.1'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.google.android.support:wearable:2.3.0'
-    implementation 'com.google.android.gms:play-services-wearable:15.0.1'
-    implementation "com.android.support:design:$android_support_version"
-    implementation "com.android.support:percent:$android_support_version"
-    implementation "com.android.support:support-v4:$android_support_version"
-    implementation "com.android.support:recyclerview-v7:$android_support_version"
-    implementation "com.android.support:wear:$android_support_version"
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
-    compileOnly 'com.google.android.wearable:wearable:2.3.0'
+    implementation 'com.google.android.support:wearable:2.4.0'
+    implementation 'com.google.android.gms:play-services-wearable:16.0.1'
+    implementation 'com.google.android.material:material:1.1.0-alpha02'
+    implementation 'androidx.percentlayout:percentlayout:1.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha01'
+    implementation 'androidx.wear:wear:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
+    compileOnly 'com.google.android.wearable:wearable:2.4.0'
 
     // Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
     // Logging
-    implementation 'com.jakewharton.timber:timber:4.6.0'
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 }
