--- a/handheld/build.gradle
+++ b/handheld/build.gradle
@@ -5,13 +5,13 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 33
 
     defaultConfig {
         applicationId "com.geckour.nocturne"
-        targetSdkVersion 28
-        minSdkVersion 24
-        versionCode 31
+        targetSdkVersion 33
+        minSdkVersion 26
+        versionCode 32
         versionName "1.0.2"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -52,26 +52,20 @@ android {
 }
 
 dependencies {
-    def coroutines_version = '1.0.1'
-    def work_version = '1.0.0-beta02'
-
     wearApp project(':wear')
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.google.android.gms:play-services-wearable:16.0.1'
+    implementation 'com.google.android.gms:play-services-wearable:17.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    implementation 'androidx.appcompat:appcompat:1.6.0-beta01'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.0-alpha03'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test:runner:1.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    // Coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
-
-    //AAC
-    implementation "android.arch.work:work-runtime:$work_version"
-    implementation "android.arch.work:work-runtime-ktx:$work_version"
+    // AndroidX
+    implementation "androidx.work:work-runtime-ktx:2.7.1"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
+    implementation "androidx.preference:preference-ktx:1.2.0"
 }
