--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -5,14 +5,23 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 33
 
     defaultConfig {
         applicationId "com.geckour.nocturne"
-        targetSdkVersion 28
-        minSdkVersion 23
-        versionCode 30
+        targetSdkVersion 33
+        minSdkVersion 26
+        versionCode 330100002
         versionName "1.0.2"
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
+    }
+
+    kotlinOptions {
+        jvmTarget = "11"
     }
 
     signingConfigs {
@@ -44,32 +53,24 @@ android {
 
     productFlavors {
         wear1 { dimension 'distribute' }
-        wear2 {
-            dimension 'distribute'
-            minSdkVersion 25
-        }
+        wear2 { dimension 'distribute' }
     }
 }
 
 dependencies {
-    def coroutines_version = '1.0.1'
-
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.google.android.support:wearable:2.4.0'
-    implementation 'com.google.android.gms:play-services-wearable:16.0.1'
-    implementation 'com.google.android.material:material:1.1.0-alpha02'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation 'com.google.android.material:material:1.7.0-beta01'
+    implementation 'com.google.android.gms:play-services-wearable:17.1.0'
     implementation 'androidx.percentlayout:percentlayout:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha01'
-    implementation 'androidx.wear:wear:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
-    compileOnly 'com.google.android.wearable:wearable:2.4.0'
-
-    // Coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+    implementation 'androidx.recyclerview:recyclerview:1.3.0-beta02'
+    implementation 'androidx.wear:wear:1.2.0'
+    implementation "androidx.wear.watchface:watchface:1.1.1"
+    implementation "androidx.wear.watchface:watchface-complications-data-source-ktx:1.1.1"
+    implementation "androidx.wear.watchface:watchface-complications-rendering:1.1.1"
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.0-alpha03'
 
     // Logging
-    implementation 'com.jakewharton.timber:timber:4.7.1'
+    implementation 'com.jakewharton.timber:timber:5.0.1'
 }
