--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "com.geckour.nocturne"
         targetSdkVersion 33
         minSdkVersion 26
-        versionCode 330100101
-        versionName "1.1.1"
+        versionCode 330100102
+        versionName "1.1.2"
     }
 
     compileOptions {
@@ -55,21 +55,20 @@ android {
         wear1 { dimension 'distribute' }
         wear2 { dimension 'distribute' }
     }
+    namespace 'com.geckour.nocturne'
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation 'com.google.android.material:material:1.7.0-beta01'
-    implementation 'com.google.android.gms:play-services-wearable:17.1.0'
-    implementation 'androidx.percentlayout:percentlayout:1.0.0'
+    implementation 'com.google.android.material:material:1.8.0-alpha01'
+    implementation 'com.google.android.gms:play-services-wearable:18.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.3.0-beta02'
     implementation 'androidx.wear:wear:1.2.0'
     implementation "androidx.wear.watchface:watchface:1.1.1"
     implementation "androidx.wear.watchface:watchface-complications-data-source-ktx:1.1.1"
     implementation "androidx.wear.watchface:watchface-complications-rendering:1.1.1"
-    implementation 'androidx.constraintlayout:constraintlayout:2.2.0-alpha03'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.0-alpha04'
 
     // Logging
     implementation 'com.jakewharton.timber:timber:5.0.1'
