--- a/handheld/build.gradle
+++ b/handheld/build.gradle
@@ -35,6 +35,14 @@ android {
         }
     }
 
+    composeOptions {
+        kotlinCompilerExtensionVersion "1.3.0"
+    }
+
+    buildFeatures {
+        compose true
+    }
+
     buildTypes {
         release {
             minifyEnabled true
@@ -57,10 +65,9 @@ dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.google.android.gms:play-services-wearable:17.1.0'
+    implementation 'com.google.android.gms:play-services-wearable:18.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.appcompat:appcompat:1.6.0-beta01'
-    implementation 'androidx.constraintlayout:constraintlayout:2.2.0-alpha03'
+    implementation 'androidx.appcompat:appcompat:1.7.0-alpha01'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test:runner:1.4.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -69,4 +76,15 @@ dependencies {
     implementation "androidx.work:work-runtime-ktx:2.7.1"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
     implementation "androidx.preference:preference-ktx:1.2.0"
+    implementation "androidx.wear.watchface:watchface-editor:1.1.1"
+
+    // Compose
+    def compose_version = "1.2.1"
+    implementation "androidx.activity:activity-compose:1.6.0"
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+
+    // Image processing
+    implementation "io.coil-kt:coil:2.2.1"
 }
