--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -4,6 +4,8 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdkVersion 33
 
@@ -41,6 +43,16 @@ android {
         }
     }
 
+    dataBinding.enabled = true
+
+    composeOptions {
+        kotlinCompilerExtensionVersion "1.3.0"
+    }
+
+    buildFeatures {
+        compose true
+    }
+
     buildTypes {
         release {
             minifyEnabled true
@@ -66,10 +78,21 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.wear:wear:1.2.0'
     implementation "androidx.wear.watchface:watchface:1.1.1"
+    implementation "androidx.wear.watchface:watchface-editor:1.1.1"
     implementation "androidx.wear.watchface:watchface-complications-data-source-ktx:1.1.1"
     implementation "androidx.wear.watchface:watchface-complications-rendering:1.1.1"
     implementation 'androidx.constraintlayout:constraintlayout:2.2.0-alpha04'
+    implementation "androidx.preference:preference-ktx:1.2.0"
 
     // Logging
     implementation 'com.jakewharton.timber:timber:5.0.1'
+
+    // Compose
+    implementation "androidx.activity:activity-compose:1.6.0"
+    implementation "androidx.compose.compiler:compiler:1.3.2"
+    implementation "androidx.compose.ui:ui:1.2.1"
+    implementation "androidx.compose.ui:ui-tooling:1.2.1"
+    implementation "androidx.compose.material:material:1.2.1"
+    implementation "androidx.wear.compose:compose-foundation:1.1.0-alpha07"
+    implementation "androidx.wear.compose:compose-material:1.1.0-alpha07"
 }
