--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -95,4 +95,5 @@ dependencies {
     implementation "androidx.compose.material:material:1.2.1"
     implementation "androidx.wear.compose:compose-foundation:1.1.0-alpha07"
     implementation "androidx.wear.compose:compose-material:1.1.0-alpha07"
+    implementation "com.google.android.horologist:horologist-compose-layout:0.1.13"
 }
