--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -13,8 +13,8 @@ android {
         applicationId "com.geckour.nocturne"
         targetSdkVersion 33
         minSdkVersion 26
-        versionCode 330100200
-        versionName "1.2.0"
+        versionCode 330100300
+        versionName "1.3.0"
     }
 
     compileOptions {
@@ -83,6 +83,8 @@ dependencies {
     implementation "androidx.wear.watchface:watchface-complications-rendering:1.1.1"
     implementation 'androidx.constraintlayout:constraintlayout:2.2.0-alpha04'
     implementation "androidx.preference:preference-ktx:1.2.0"
+
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4"
 
     // Logging
     implementation 'com.jakewharton.timber:timber:5.0.1'
