--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -46,7 +46,7 @@ android {
     dataBinding.enabled = true
 
     composeOptions {
-        kotlinCompilerExtensionVersion "1.3.0"
+        kotlinCompilerExtensionVersion "1.3.2"
     }
 
     buildFeatures {
@@ -73,7 +73,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation 'com.google.android.material:material:1.8.0-alpha01'
+    implementation 'com.google.android.material:material:1.8.0-alpha02'
     implementation 'com.google.android.gms:play-services-wearable:18.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.wear:wear:1.2.0'
@@ -90,13 +90,13 @@ dependencies {
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
     // Compose
-    implementation "androidx.activity:activity-compose:1.6.0"
+    implementation "androidx.activity:activity-compose:1.6.1"
     implementation "androidx.compose.compiler:compiler:1.3.2"
-    implementation "androidx.compose.ui:ui:1.2.1"
-    implementation "androidx.compose.ui:ui-tooling:1.2.1"
-    implementation "androidx.compose.material:material:1.2.1"
-    implementation "androidx.wear.compose:compose-foundation:1.1.0-alpha07"
-    implementation "androidx.wear.compose:compose-material:1.1.0-alpha07"
+    implementation "androidx.compose.ui:ui:1.3.0"
+    implementation "androidx.compose.ui:ui-tooling:1.3.0"
+    implementation "androidx.compose.material:material:1.3.0"
+    implementation "androidx.wear.compose:compose-foundation:1.1.0-beta01"
+    implementation "androidx.wear.compose:compose-material:1.1.0-beta01"
     implementation "com.google.android.horologist:horologist-compose-layout:0.1.13"
     implementation files('libs/AstroLib.jar')
 }
